Tue Jul  6 22:57:21 2010  Tanaka Akira  <akr@fsij.org>

	* io.c (nogvl_copy_stream_sendfile): jump to retry_sendfile directly
	  to avoid select() on a socket which TCP state is CLOSED.
	  patch by Eric Wong.  [ruby-core:31053]

Mon May 30 15:44:16 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* insns.def (opt_mult): as r31805, volatile it.
	  Without this, clang -O fails calculation.

	* numeric.c (fix_mul): ditto.

	* rational.c (f_imul): ditto.

Mon May 30 10:26:51 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (int_pow): make sure to assign the result of x * z.
	  If xz is optimized out, the value won't overflow.

Sun May 29 15:09:05 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_round): fix for negative value.

Sat May 28 03:04:27 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (fill_cbuf): return MORE_CHAR_SUSPENDED when cbuf is not empty.

Fri May 27 22:38:54 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (fill_cbuf): finish reading at EOF.

Fri May 27 11:31:51 2011  misfo <tedwardo2@gmail.com>

	* lib/rexml/text.rb (REXML::Text#initialize): prevent an error
	  when passing a frozen string to REXML::Text.new

	  dup the string passed in instead of cloning so that it's frozen
	  state is ignored

Sun May 22 07:10:25 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_pkey_dsa.rb: Add tests for sign/verify.

Thu May 19 07:47:26 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_pkey_rsa.rb: Add tests for sign/verify.

Wed May 18 20:25:04 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/timeout.rb (Timeout#timeout): don't leak "execution expired"
	  exception. [Bug #4283] [ruby-core:34534].

Wed May 18 03:14:49 2011  Eric Hodel  <drbrain@segment7.net>

	* test/test_singleton.rb:  Add tests from lib/singleton.rb.  Patch by
	  Pete Higgins.  [Ruby 1.9 - Bug #4715]

Tue May 17 20:20:49 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
